--- a/src/sidebar/RoutingResult.module.css
+++ b/src/sidebar/RoutingResult.module.css
@@ -185,3 +185,20 @@
     color: #383838;
     padding-top: 1px;
 }
+
+.safety {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: end;
+    height: 1em;
+}
+
+.safety > * {
+    font-style: italic;
+    font-size: small;
+    padding: 0;
+    margin: 0;
+    margin-right: 1em;
+    max-height: 100%;
+}
